--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -10,3 +10,4 @@ spring.flyway.user=orderadmin
 spring.flyway.password=password
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.format_sql=true
